@@ -21,25 +21,6 @@
 		<java.version>10</java.version>
 	</properties>
 
-	<distributionManagement>
-		<repository>
-			<id>digital-releases</id>
-			<name>LMB Release Repository</name>
-			<url>
-                https://tools.digital.lincolnfinancial.codes/artifactory/java/
-            </url>
-		</repository>
-
-		<snapshotRepository>
-			<id>digital-snapshots</id>
-			<name>LMB Snapshot Repository</name>
-			<url>
-                https://tools.digital.lincolnfinancial.codes/artifactory/java/
-            </url>
-		</snapshotRepository>
-	</distributionManagement>
-
-
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -67,15 +48,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk</artifactId>
-			<version>1.11.440</version>
-		</dependency>-->
+
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.9.9</version>
 		</dependency>
 
 		<dependency>
@@ -148,25 +124,7 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
 
-			<!-- <plugin> <groupId>com.spotify</groupId> <artifactId>dockerfile-maven-plugin</artifactId> 
-				<version>1.3.6</version> <executions> <execution> <goals> <goal>build</goal> 
-				</goals> </execution> </executions> <dependencies> <dependency> <groupId>javax.activation</groupId> 
-				<artifactId>activation</artifactId> <version>1.1.1</version> </dependency> 
-				</dependencies> <configuration> <repository>${docker.image.prefix}/${project.artifactId}</repository> 
-				<tag>${project.version}</tag> <contextDirectory>src/main/docker</contextDirectory> 
-				<buildArgs> <JAR_FILE>${project.build.finalName}.${project.packaging}</JAR_FILE> 
-				</buildArgs> </configuration> </plugin> -->
 
 		</plugins>
 	</build>
